--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Background Generator</title>
     <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body id="gradient">
-    <h1>Background Generator</h1>
+    <h1>Cool Generator</h1>
     <input class="color1" name="color1" type="color" value="#00ff00" />
     <input class="color2" name="color2" type="color" value="#ff0000" />
     <h2>Current CSS Background</h2>
